--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Generate snake animation
         uses: Platane/snk@master
         with:
-          github_user_name: <your-github-username>
+          github_user_name: GonChaung
           output: dist/github-contribution-grid-snake.svg
 
       - name: Upload the SVG file
